Stopped review preview from overflowing

--- a/src/routes/PreviewReviews/PreviewReviews.css
+++ b/src/routes/PreviewReviews/PreviewReviews.css
@@ -50,9 +50,10 @@
 .preview-reviews-container .reviews-container .review-card .container-lhs {
     display: flex;
     gap: 1em;
+    width: 85%;
 }
 
-.preview-reviews-container .reviews-container .review-card .container-lhs > div:first-child {
+.preview-reviews-container .reviews-container .review-card .container-lhs:first-child {
     flex-shrink: 0;
 }
 
@@ -61,6 +62,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 0.5em;
+    width: 60%;
 }
 
 .preview-reviews-container .reviews-container .review-card .container-lhs .preview p {
@@ -87,6 +89,6 @@
 }
 
 .preview-reviews-container .reviews-container .review-card button .icon {
-    color: grey;
+    color: dimgrey;
     font-size: 1.25rem;
 }
